2001-12-03  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install-exec): Don't create an empty libdir.
	(installdirs): Update accordingly.

2001-11-30  Bruno Haible  <bruno@clisp.org>

	* plural-exp.h (plural_eval): Add back declaration.
	* Makefile.in (OBJECTS): Remove plural-eval.$lo.
	(COMSRCS): Remove plural-eval.c.
	(COMHDRS): Add plural-eval.c.
	(plural-eval.$lo): Remove dependency.
	(dcigettext.$lo): Depend on plural-eval.c.

2001-11-29  Bruno Haible  <bruno@clisp.org>

	* gettextP.h (_nl_locale_name): Don't declare inside glibc.
	* localename.c (_nl_locale_name): Remove _LIBC conditional.

2001-11-27  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c (guess_category_value): Inside glibc, use setlocale
	directly, not _nl_locale_name.

2001-11-27  Ulrich Drepper  <drepper@redhat.com>

	* loadmsgcat.c (_nl_init_domain_conv): Modify #if expression.

2001-11-27  Ulrich Drepper  <drepper@redhat.com>

	* plural-eval.c (plural_eval): Rename back from PLURAL_EVAL.
	* plural-exp.h (PLURAL_EVAL): Remove declaration.
	* dcigettext.c Include plural-eval.c.
	(plural_lookup): Call plural_eval instead of PLURAL_EVAL.

2001-11-22  Bruno Haible  <bruno@clisp.org>

	* plural-exp.h (GERMANIC_PLURAL): New declaration.
	* plural-exp.c (GERMANIC_PLURAL): Renamed from germanic_plural.
	* loadmsgcat.c (_nl_unload_domain): Update.

2001-07-17  Ulrich Drepper  <drepper@redhat.com>

	* localealias.c (read_alias_file): Disable implicit locking
	for the stream.  Use _unlocked functions for glibc.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (dist): Avoid using hard links, because the automake-1.5
	generated toplevel 'distdir' target chmods all the distributed files.

2001-11-10  Bruno Haible  <haible@clisp.cons.org>

	* libgnuintl.h (_INTL_PARAMS): Renamed from PARAMS, to avoid polluting
	the user's namespace.
	Also test for __GNUC__, __SUNPRO_C and __PROTOTYPES because on
	64-bit Solaris, we need prototypes although __STDC__ is often defined